--- a/2 - Data Structures/main.ipynb
+++ b/2 - Data Structures/main.ipynb
@@ -13,12 +13,14 @@
     "We will cover the following data structures in this tutorial:\n",
     "\n",
     "1. Tuples\n",
-    "2. Dictionaries\n",
-    "3. Arrays\n",
+    "2. Sets\n",
+    "3. Dictionaries\n",
+    "4. Arrays\n",
     "\n",
     "|                   | Ordered | Mutable |\n",
     "| :--------------:  |  :---:  | :-----: |\n",
     "| **Tuples**        |   Yes   |   No    |\n",
+    "| **Sets**          |   No    |   No    |\n",
     "| **Dictionaries**  |   No    |   Yes   |\n",
     "| **Arrays**        |   Yes   |   Yes   |\n",
     "\n",
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +48,7 @@
        "(\"ABC\", \"easy as one two three\")"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +71,7 @@
       "",
       "Stacktrace:",
       " [1] top-level scope",
-      "   @ In[39]:1",
+      "   @ In[2]:1",
       " [2] eval",
       "   @ ./boot.jl:360 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
@@ -78,19 +80,51 @@
     }
    ],
    "source": [
-    "my_tup[1] = \"DEF\" # doesn't work: tuples are immutable"
+    "my_tup[1] = \"DEF\" # doesn't work, tuples are immutable"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dictionaries"
+    "## Sets\n",
+    "Similar to a mathematical set. Elements are unique."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Set{Int64} with 3 elements:\n",
+       "  2\n",
+       "  3\n",
+       "  1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_set = Set([1, 1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dictionaries\n",
+    "Format is `Dict(key1 => value1, key2 => value2, ...etc)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +136,7 @@
        "  \"apples\"  => 1.5"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,23 +168,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "One of the items costs oranges\n",
-      "One of the items costs bananas\n",
-      "One of the items costs apples\n"
+      "One of the items costs 3.5 €\n",
+      "One of the items costs 4.0 €\n",
+      "One of the items costs 1.5 €\n"
      ]
     }
    ],
    "source": [
-    "for v in keys(prices)\n",
-    "    println(\"One of the items costs $v\")\n",
+    "for v in values(prices)\n",
+    "    println(\"One of the items costs $v €\")\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Pair{String, Float64}}:\n",
+       " \"oranges\" => 3.5\n",
+       " \"bananas\" => 4.0\n",
+       "  \"apples\" => 1.5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collect(prices) # array of elements of a dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Int64, String} with 2 entries:\n",
+       "  2 => \"b\"\n",
+       "  1 => \"a\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Int64, String} with 3 entries:\n",
+       "  4 => \"d\"\n",
+       "  2 => \"b\"\n",
+       "  3 => \"c\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "d1 = Dict(1 => \"a\", 2 => \"b\") ; d2 = Dict(2 => \"b\", 3 =>\"c\", 4 => \"d\")\n",
+    "display(d1)\n",
+    "display(d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Pair{Int64, String}}:\n",
+       " 2 => \"b\"\n",
+       " 1 => \"a\"\n",
+       " 4 => \"d\"\n",
+       " 3 => \"c\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "union(d1, d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{Pair{Int64, String}}:\n",
+       " 2 => \"b\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intersect(d1, d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{Pair{Int64, String}}:\n",
+       " 1 => \"a\""
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setdiff(d1, d2)"
    ]
   },
   {
@@ -164,25 +322,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{String}:\n",
+       " \"Paris\"\n",
+       " \"Nice\"\n",
+       " \"Monaco\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cities = [\"Paris\", \"Nice\", \"Monaco\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6-element Vector{Int64}:\n",
+       " 3\n",
+       " 1\n",
+       " 4\n",
+       " 1\n",
+       " 5\n",
+       " 9"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pi = [3, 1, 4, 1, 5, 9]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +407,69 @@
        "  'u': ASCII/Unicode U+0075 (category Ll: Letter, lowercase)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "user_input_is = [1.0, \"hell of a mess\", 4, 'u']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Int64}:\n",
+       "  1\n",
+       "  4\n",
+       "  9\n",
+       " 16"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x^2 for x in 1:4] # array comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12-element Vector{Int64}:\n",
+       "  5\n",
+       "  8\n",
+       " 11\n",
+       "  7\n",
+       " 10\n",
+       " 13\n",
+       "  9\n",
+       " 12\n",
+       " 15\n",
+       " 11\n",
+       " 14\n",
+       " 17"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[2*x + 3*y for x in 1:4 for y in 1:3] # multiple comprehensions"
    ]
   }
  ],
