--- a/3 - Functions/main.ipynb
+++ b/3 - Functions/main.ipynb
@@ -1,6 +1,8 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Functions\n",
     "Functions allow to execute a bunch of code multiple times without copy pasting. This is the DRY principle: Don't Repeat Yourself.\n",
@@ -16,31 +18,30 @@
     "end\n",
     "```\n",
     "*NB: single line comments can also be used*"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
-   "source": [
-    "\"this function prints the string `aaa`\"\n",
-    "function f()\n",
-    "    print(\"aaa\")\n",
-    "end"
-   ],
    "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
-   "execution_count": 1,
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "f"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 1
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "\"this function prints the string `aaa`\"\n",
+    "function f()\n",
+    "    println(\"aaa\")\n",
+    "    println(\"bbb\")\n",
+    "end"
    ]
   },
   {
@@ -49,14 +50,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "f (generic function with 1 method)"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -65,14 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "aaa"
+      "aaa\n",
+      "bbb\n"
      ]
     }
    ],
@@ -82,18 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "g"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -108,18 +110,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "5"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -128,18 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "#1 (generic function with 1 method)"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -148,18 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "4"
       ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -168,18 +170,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "8"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 8
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -188,18 +190,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "9"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -208,18 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "-1"
       ]
      },
+     "execution_count": 19,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -228,18 +230,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "24"
       ]
      },
+     "execution_count": 20,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -248,18 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3.0"
       ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "execution_count": 12
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -268,18 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "8"
       ]
      },
+     "execution_count": 22,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -288,18 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3"
       ]
      },
+     "execution_count": 23,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -331,7 +333,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.6.1"
   }
  },
  "nbformat": 4,
